[package]
name = "dottorrent"
version = "0.1.0"
edition = "2021"
authors = ["Ariyan Eghbal <ryn.eghbal@gmail.com>"]


[dependencies]
serde = "^1.0.0"
serde_bencode = "^0.2.4"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
sha1 = "0.10.6"
md-5 = "0.10.6"
hex = "0.4.3"
serde_json = "*"

[lib]
name = "libdottorrent"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "print_torrent"

[dev-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
human_bytes = "0.4.3"
